--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 		"build": "svelte-kit sync && svelte-package",
 		"prepublishOnly": "echo 'Did you mean to publish `./package/`, instead of `./`?' && exit 1",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"generate": "prisma generate",
+		"migrate": "prisma migrate dev"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^1.0.0",
@@ -21,11 +23,15 @@
 	"type": "module",
 	"dependencies": {
 		"@prisma/client": "^4.8.1",
+		"@types/glob": "^8.0.1",
+		"@types/js-cookie": "^3.0.2",
+		"csrf": "^3.1.0",
 		"glob": "^8.0.3",
+		"js-cookie": "^3.0.1",
 		"prisma": "^4.8.1",
 		"superjson": "^1.12.1"
 	},
-        "prisma": {
-                "schema": "src/db/schema.prisma"
-        }
+	"prisma": {
+		"schema": "src/db/schema.prisma"
+	}
 }
