--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@types/glob": "^8.0.1",
 		"@types/js-cookie": "^3.0.2",
 		"csrf": "^3.1.0",
+		"esm-env": "^1.0.0",
 		"glob": "^8.0.3",
 		"js-cookie": "^3.0.1",
 		"prisma": "^4.8.1",
