--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "vite-blitz",
-	"version": "0.0.1",
+	"version": "0.0.2c",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "svelte-kit sync && svelte-package",
@@ -18,7 +18,7 @@
 		"svelte-check": "^2.9.2",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
+		"vite": "^4.1.1"
 	},
 	"type": "module",
 	"dependencies": {
@@ -30,7 +30,9 @@
 		"glob": "^8.0.3",
 		"js-cookie": "^3.0.1",
 		"prisma": "^4.8.1",
-		"superjson": "^1.12.1"
+		"superjson": "^1.12.1",
+		"vite-blitz": "^0.0.2-c",
+		"vite-blitz-pack": "^0.0.1"
 	},
 	"prisma": {
 		"schema": "src/db/schema.prisma"
